retirado os parametros de tamanho da foto do perfil - li-18

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="group">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                     <div class="profile-photo">
-                        <img src="./img/perfil-insta.jpg" alt="foto do perfil" width="150" height="150">
+                        <img src="./img/perfil-insta.jpg" alt="foto do perfil">
                     </div>
                     <a href="#" class="instagram-login">Continue como Nicolas Vogiantzis</a>
                     <a href="#" class="instagram-logout">Remover Conta</a>
@@ -39,5 +39,5 @@
         </div>
     </div>
 
-    
+
 </body>
